style/style.css
/* ... */
.gallery div:hover:before{
    opacity: 1;
}

.gallery div img:hover{
    transform: scale(1.5);
}



/* GALLERY */


@media only screen and (max-width: 768px){
    
    .index-background{
        background-size: cover;
    }

    header{
        height: 60px;
        width: 100%;
        background-color: #202020;
        display: flex;
        justify-content: center;

    }
    
    .homepage-banner{
        padding: 0;
    }

    .logo{
        margin-top: 5px;
    }

    .hamburger, #ham {
        top: 0;
        left: 0;
        margin-left: 0;
        margin: 5px;
        z-index: 4;
    }

    .hamburger-dots, #ham-dots {
        top: 5px;
        right: 0;
        margin-left: 0;
        margin: 5px;
        z-index: 4;
        display: inline-block;
    }

    .li-nav{
        flex-direction: column;
        width: 80%;
        position: absolute;
        top: 0;
        left: 0;
        background-color: #202020;
        font-size: 25px;
        height: 100vh;
        z-index: 3;
        margin-top: 0;
        margin: 0;
        
    }

    .r-soc{
        flex-direction: column;
        width: 80%;
        position: absolute;
        top: 0;
        right: 0;
        background-color: #202020;
        font-size: 25px;
        height: 100vh;
        z-index: 3;
        margin-top: 0;
        margin: 0;
        
    }

    header .li-nav, header .r-soc{
        flex-direction: column;
        align-items: center;
        justify-content: center;
        
    }

    header .li-nav-item, header .r-soc-item a{
        margin-left: 0;
    }

    header .li-nav-item, header .r-soc-item{
        margin-bottom: 25px;
        border-bottom: 1px solid white;
    }

    .toggler:checked ~ main{
        position: fixed;
        overflow-y: hidden;
        height: 100%;
    }

    .dotsmenu{
        position: absolute;
        top: 15px;
        right: 2px;
        display: inline-block;
    }
    

    .intro{
        height: auto;
        padding-top: 105px;
        margin: 0;
    }

    .feel-the-rhythm{
        font-size: 8vw;
    }

    .feel-the-rhythm, .new-single{
        margin: 0;
    }

    #audioplayer{
        margin: 0;
    }

    .musicTime{
        font-size: 20px;
        width: 150px;
        height: auto;
    }

    .next-gig{
        top: 450px;
        flex-direction: column;
        width: 90%;
        left: 5%;
        padding: 25px 0;
    }

    .next-gig .text{
        width: 100%;
        text-align: center;
    }
    .next-gig .countdown div h2{
        font-size: 7vw;
    }
    .next-gig .countdown .countdown-days{
        margin: 0;
    }

    .next-gig p{
        font-size: 1.8vw;
    }

    .next-gig h3{
        font-size: 4vw;
    }

    .next-gig .countdown{
        margin-top: 1vh;
    }

    .next-gig .countdown div{
        margin-left: 10vw;
    }

    .next-gig .countdown div h5{
        font-size: 0.5rem;
    }

    .btn-buy-tickets{
        margin: 0;
        padding: 2vh 25vw;
        margin-top: 3vh;
        margin-bottom: 0;
    }

    .timeline-content{
        max-width: 400px;
    }
    .timeline-content .text{
        max-width: 300px;
    }

    .img-dj{
        width: 270px;
        height: 180px;
        margin-right: 10px;
    }
    .about-dj-angerone{
        align-items: flex-start;
        padding: 407px 0 90px 0
    }
    .text-about-dj-angerone{
        width: 45%;
        text-align: left;
        word-wrap: break-word;
    }

    .text-about-dj-angerone h2{
        font-size: 1.5rem;
    }

    .text-about-dj-angerone p{
        font-size: 2vw;
    }

    .view-discography h2{
        font-size: 4vw;
    }

    .latest-releases{
        padding: 86px 0;
    }
    .latest-releases h2{
        font-size: 25px;
    }

    .latest-releases p{
        max-width: 508px;
    }

    .album-cover{
        width: 330px;
        height: 350px;
    }

    .album-covers-container{
        justify-content: space-between;
    }

    .logos-container li{
        margin-left: 2rem;
    }

    .join-fan-base{
        flex-direction: column;
        justify-content: center;
    }

    .join-fan-base .pictures{
        margin-right: 0;
    }
  
    .join-text-article{
        display: flex;
        flex-direction: row;
       align-items: center;
       justify-content: flex-start;
        height: auto;
        flex-wrap: wrap;
     

    }

    .join-articles{
        margin: 0;
        margin-right: 20px;
        max-width: 330px;
        margin-top: 50px;
    }

    .join-text{
        max-width: 95%;
    }

    .join-text h2{
        font-size: 25px;
    }

    #container-schedule{
        width: 90%;
    }

    .partners h2{
        font-size: 4vw;
    }

    .btn-up{
        position: fixed;
    bottom: 10px;
    right: 10px;
    }

    footer .logo-footer{
        margin-top: 60px;
    }


.footer-nav{
    margin-top: 30px;
}

.footer-soc{
    margin-top: 30px;
    margin-bottom: 50px;
}

.footer-soc li{
    margin-left: 0;
}

footer h5{
    margin-bottom: 65px;
}

.toggler:checked ~ .homepage-banner .homepage-nav .li-nav{
    transform: translateX(-500px);
    opacity: 0;
}

.toggler-dots:checked ~ .homepage-banner .homepage-nav .r-soc{
    transform: translateX(500px);
    opacity: 0;
}

.toggler:checked ~ .homepage-banner .homepage-nav {
    transform: none;
}
    }
/* ... */

